# sha-2-verifier

./: .gitignore  README.md  main.py  pyproject.toml  setup.cfg  setup.py  sha-2-verifier.py
.github/workflows/: pytest.yml
hash_verifier/: __init__.py  hash_verifier.py
sha2_verifier/: sha2_verifier.py
src/hash_verifier/: __init__.py  hash_verifier.py
tests/: sample_target_file.png.sha256  sample_target_file.png.sha512  test_hash_verifier.py
tests/hash_files/: sample_target_file.png.md5
