[metadata]
name = hash-verifier
version = 2.1.0
author = Muneue SUWA
author_email = dongsiku@gmail.com
description = Verify hash value of files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/muneue-suwa/hash-verifier
project_urls =
    Bug Tracker = https://github.com/muneue-suwa/hash-verifier/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: The Unlicense
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
console_scripts =
    vh = hash_verifier.main

[options.packages.find]
where = src
