[metadata]
name = hash-verifier
version = 3.1.2
author = Muneue SUWA
author_email = dongsiku@gmail.com
description = Verify hash value of files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/muneue-suwa/hash-verifier
project_urls =
    Bug Tracker = https://github.com/muneue-suwa/hash-verifier/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: The Unlicense
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = hash_verifier
python_requires = >=3.10

[options.entry_points]
console_scripts =
    vh = hash_verifier.main

[options.packages.find]
where = src

[tool:pytest]
python_files =
    tests/test_hash_verifier.py
